--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,13 @@ authors = ["Anatolii Burtsev <aburtsev@amazon.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 jupyterlab = "^4.2.0"
 pandas = "^2.2.2"
-pyarrow = "^16.0.0"
 seaborn = "^0.13.2"
 scikit-learn = "^1.4.2"
+mlflow = "^2.13.0"
+hyperopt = "^0.2.7"
 
 
 [build-system]
