--- a/hw3/mlops/homework_03/pipelines/pipeline1/metadata.yaml
+++ b/hw3/mlops/homework_03/pipelines/pipeline1/metadata.yaml
@@ -2,6 +2,7 @@ blocks:
 - all_upstream_blocks_executed: true
   color: null
   configuration:
+    dynamic: false
     file_source:
       path: homework_03/data_loaders/vivid_explorer.py
   downstream_blocks:
@@ -12,12 +13,12 @@ blocks:
   language: python
   name: vivid explorer
   retry_config: null
-  status: executed
+  status: failed
   timeout: null
   type: data_loader
   upstream_blocks: []
   uuid: vivid_explorer
-- all_upstream_blocks_executed: true
+- all_upstream_blocks_executed: false
   color: null
   configuration:
     file_source:
@@ -36,7 +37,7 @@ blocks:
   upstream_blocks:
   - vivid_explorer
   uuid: gracious_myth
-- all_upstream_blocks_executed: true
+- all_upstream_blocks_executed: false
   color: null
   configuration:
     file_source:
@@ -49,13 +50,13 @@ blocks:
   language: python
   name: luminous crafter
   retry_config: null
-  status: executed
+  status: updated
   timeout: null
   type: transformer
   upstream_blocks:
   - gracious_myth
   uuid: luminous_crafter
-- all_upstream_blocks_executed: true
+- all_upstream_blocks_executed: false
   color: null
   configuration:
     file_source:
