--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,11 @@ python = "^3.11"
 jupyterlab = "^4.2.0"
 pandas = "^2.2.2"
 seaborn = "^0.13.2"
-scikit-learn = "^1.4.2"
+scikit-learn = "1.5.0"
 mlflow = "^2.13.0"
 hyperopt = "^0.2.7"
 setuptools = "^70.0.0"
+click = "^8.1.7"
 
 
 [build-system]
